--- a/style.css
+++ b/style.css
@@ -39,6 +39,28 @@ div h1 {
      margin-bottom: 4px;
 }
 
-div p {
-  
+div strong {
+    color: #c4f82a;
+    font-size: 14px;
+    line-height: 21px;
 }
+
+  div p {
+      margin-block: 24px;
+      font-size: 14px;
+      line-height: 21px;
+  }
+
+  div a+a {
+
+  }
+
+  div a {
+    display: block;
+    margin-top: 16px;
+    text-decoration: none;
+    background-color: #333;
+    padding: 12px;
+    border-radius: 8px;
+    font-weight: 700;
+  }
